--- a/.gitignore
+++ b/.gitignore
@@ -19,16 +19,16 @@ bd/*/*
 ## Output files
 #################################################################################
 bit
-os
+os/hw
+os/zynq_os
 
 #################################################################################
 ## Sim files
 #################################################################################
-sim/*
 sim/*/*
-!sim/tb*/
-!sim/tb*/*tcl
-!sim/tb*/*vhd
+sim/*
+!sim/tb*/*.tcl
+!sim/tb*/*.vhd
 #################################################################################
 ## Temp build files
 #################################################################################
