--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 #tempfiles
+*
 *~
+*/#*#
 make_log.txt
 
 #################################################################################
@@ -7,6 +9,13 @@ make_log.txt
 #################################################################################
 #build direcotry
 proj/
+
+
+#scripts dir
+!scripts
+!scripts/*.tcl
+
+
 
 #all the vivado stuff in the cores directory execpt the xci files
 cores/*/*
